# AdventOfCode

2018/Day11/: grid  main.cpp
2018/Day12/: a.out  main.cpp
2018/Day13/: main.cpp
2018/Day14/: a.out  main.cpp
2018/Day5/: a.out  main.cpp
2018/Day7/: a.out  main.cpp
2019/Day1/: main.cpp  meson.build
2019/Day2/: part1.cpp  part2.cpp
2019/Day3/: part1.cpp  part2.cpp
2019/Day4/: part1.cpp  part2.cpp
2019/Day5/: part1.cpp  part2.cpp
2019/Day6/: part1.cpp  part2.cpp
2020/day1/: part1.cpp  part2.cpp
2020/day10/: part1.cpp  part2.cpp
2020/day11/: part1.cpp  part2.cpp
2020/day12/: part1.cpp  part2.cpp
2020/day13/: part1.cpp  part2.cpp
2020/day14/: part1.cpp  part2.cpp
2020/day15/: part1.cpp  part2.cpp
2020/day16/: part1.cpp  part2.cpp
2020/day17/: part1.cpp  part2.cpp
2020/day18/: part1.cpp  part2.cpp
2020/day19/: part1.cpp  part2.cpp
2020/day2/: part1.cpp  part2.cpp
2020/day20/: part1.cpp  part2.cpp
2020/day21/: part2.cpp
2020/day22/: part1.cpp  part2.cpp
2020/day23/: meson.build  part1.cpp  part2.cpp
2020/day24/: part1.cpp  part2.cpp
2020/day25/: compile_commands.json  part1.cpp  part2.cpp
2020/day3/: meson.build  part1.cpp  part2.cpp  part2best.cpp  part2better.cpp
2020/day4/: part1.cpp  part2.cpp
2020/day5/: part1.cpp  part2.cpp
2020/day6/: meson.build  part1.cpp  part2.cpp
2020/day7/: part1.cpp  (+1 more)
Day10/: a.out  main.cpp  output
Day11/: a.out
Day12/: output
Day13/: a.out
Day4/: d4_part1.py  d4_part2.py
Day6/: a.out  main.cpp
Day7/: a.out  main.cpp
Day8/: a.out  main.cpp
Day9/: a.out  main.cpp
(+4 files in other folders)
